
API

• Improved API "meta" docstrings and :help documentation.
• |nvim__ns_set()| can set properties for a namespace
• |nvim_echo()| `err` field to print error messages and `chunks` accepts
  highlight group IDs.
• |nvim_open_win()| `relative` field can be set to "laststatus" and "tabline".
• |nvim_buf_set_extmark()| `hl_group` field can be an array of layered groups

DEFAULTS

• Highlighting:
  • Improved styling of :checkhealth and :help buffers.

• Mappings:
  • |grn| in Normal mode maps to |vim.lsp.buf.rename()|
  • |grr| in Normal mode maps to |vim.lsp.buf.references()|
  • |gri| in Normal mode maps to |vim.lsp.buf.implementation()|
  • |gO| in Normal mode maps to |vim.lsp.buf.document_symbol()|
  • |gra| in Normal and Visual mode maps to |vim.lsp.buf.code_action()|
  • CTRL-S in Insert and Select mode maps to |vim.lsp.buf.signature_help()|
  • Mouse |popup-menu| includes an "Open in web browser" item when you right-click
    on a URL.
  • Mouse |popup-menu| includes a "Go to definition" item when LSP is active
    in the buffer.
  • |]d-default| and |[d-default| accept a count.
  • |[D-default| and |]D-default| jump to the first and last diagnostic in the
    current buffer, respectively.
  • Mappings inspired by Tim Pope's vim-unimpaired:
    • |[q|, |]q|, |[Q|, |]Q|, |[CTRL-Q|, |]CTRL-Q| navigate through the |quickfix| list
    • |[l|, |]l|, |[L|, |]L|, |[CTRL-L|, |]CTRL-L| navigate through the |location-list|
    • |[t|, |]t|, |[T|, |]T|, |[CTRL-T|, |]CTRL-T| navigate through the |tag-matchlist|
    • |[a|, |]a|, |[A|, |]A| navigate through the |argument-list|
    • |[b|, |]b|, |[B|, |]B| navigate through the |buffer-list|
    • |[<Space>|, |]<Space>| add an empty line above and below the cursor

• Snippet:
  • `<Tab>` in Insert and Select mode maps to `vim.snippet.jump({ direction = 1 })`
    when a snippet is active and jumpable forwards.
  • `<S-Tab>` in Insert and Select mode maps to `vim.snippet.jump({ direction = -1 })`